# aecf

./: .gitignore  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  PYPI_READY.md  README.md  REFACTORING_COMPLETE.md  colab_cache_upload.py  colab_data_setup.py  colab_upload_cache.py  colab_upload_to_gdrive.py  create_dummy_cache.py  demo_enhanced_download.py  model_ideal.py  model_review_analysis.py  oldleg.py  pyproject.toml  requirements.txt  setup.py  test_ablation.py  test_batch_format.py  test_coco.py  test_concurrent_download.py  test_final_verification.py  test_mini_ablation.py  test_simple_batch.py  upload_cache_to_gdrive.py  validate_repository.py
Colab/: multiArch.py  proper_aecf_core.dpy  proper_aecf_core.py  test_coco.py  test_fix.py  test_full.py
ablation_results/: analysis_report.md  analysis_summary.csv  raw_results.json
aecf/: __init__.py  components.py  config.py  datasets.py  losses.py  metrics.py  model.py  model_refactored.py  train.py  training.py  utils.py
examples/: comprehensive_examples.py  legacy_ablation.py
scripts/: coco_ablation_suite.py  fetch_coco.sh
test/: MODULARIZATION_COMPLETE.md  README.md  __init__.py  avmnist.py  cocoAblation.py  cocoAblation_new.py  cocoAblation_original.py  coco_ablation_suite.py  run_ablation_colab.py  setup.py  setup.sh
test_coco2014/: splits_60k5k5k.json  test_5k_clip_feats.pt  train_60k_clip_feats.pt  val_5k_clip_feats.pt
tests/: aecf_benchmark_suite.py  aecf_test_runner.py  test_aecf.py  test_comprehensive.py
utils/: quick_meter.py
xrays/: extract_xray_pathologies.py  train_xrays_example.py  (+1 more)
(+20 files in other folders)
